style: fix overflow issue on code blocks in mobile devices

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,4 +58,5 @@ pre[class*="language-"] {
   margin-left: -$wf-container-padding;
   margin-right: -$wf-container-padding;
   font-size: 14px;
+  overflow-x: auto;
 }
